# KiloHoku_DataProcessor

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
alembic/: COMMANDS.md  env.py
alembic/versions/: 20260626_0001_create_astronomy_schema.py  20260626_0002_create_initial_astronomy_tables.py
docker/: Dockerfile.worker  docker-compose.example.yml
docs/: architecture.md  database-contract.md  docker.md  migrations.md  processing-flow.md  shortcuts.md
scripts/: benchmark_large_xml.py  preload_light_curves.py  run_light_curve_viewer.py  run_worker.py
src/data_processor/: __init__.py  main.py
src/data_processor/acquisition/: __init__.py
src/data_processor/acquisition/importers/: local_light_curve_preloader.py
src/data_processor/bootstrap/: __init__.py  dependencies.py  runtime.py
src/data_processor/cli/: __init__.py  commands.py
src/data_processor/config/: logging.py  settings.py
src/data_processor/core/: __init__.py
src/data_processor/core/application/dto/: job_status.py  job_summary.py
src/data_processor/core/application/orchestration/: __init__.py  processing_pipeline.py
src/data_processor/core/application/ports/: __init__.py  analysis_processor.py  data_transformer.py  job_repository.py  progress_reporter.py  result_repository.py  source_file_repository.py  xml_format_detector.py  xml_reader.py
src/data_processor/core/application/use_cases/: claim_pending_jobs.py  execute_processing_job.py  update_job_status.py
src/data_processor/core/domain/: __init__.py  exceptions.py
src/data_processor/core/domain/models/: astronomical_source.py  light_curve.py  observation.py  processing_job.py  processing_result.py  xml_document.py
src/data_processor/core/domain/services/: job_policy.py  validation_rules.py
src/data_processor/core/shared/: __init__.py  result.py  types.py
src/data_processor/infrastructure/database/: __init__.py  postgres_connection.py  postgres_job_repository.py  postgres_result_repository.py  postgres_source_file_repository.py  session.py
src/data_processor/infrastructure/database/models/: __init__.py  _schema.py  astronomical_object.py  photometric_observation.py  (+6 more)
src/data_processor/infrastructure/export/: __init__.py  csv_exporter.py  json_exporter.py  parquet_exporter.py
src/data_processor/infrastructure/importers/: __init__.py  local_light_curve_preloader.py
src/data_processor/infrastructure/monitoring/: __init__.py  progress_logger.py
src/data_processor/infrastructure/pandas/: __init__.py  aggregations.py  chunk_processor.py  dataframe_builder.py  light_curve_analyzer.py
src/data_processor/infrastructure/storage/: __init__.py  local_file_storage.py
src/data_processor/infrastructure/xml/: __init__.py  dom_reader.py  format_detector.py  parser_factory.py  schema_validator.py  streaming_reader.py  votable_light_curve_reader.py
src/data_processor/local_viewer/: app.py  styles.css
src/data_processor/odm/: __init__.py
src/data_processor/odm/database/: base.py  engine.py  schema.py  session.py
src/data_processor/processing/: __init__.py
src/data_processor/viewer/: __init__.py
src/data_processor/viewer/local_viewer/: __init__.py  app.py
src/data_processor/worker/: __init__.py  job_claiming.py  job_runner.py  loop.py  scheduler.py  worker_settings.py
tests/unit/database/: test_job_repository.py  test_light_curve_repository.py
tests/unit/importers/: test_local_light_curve_preloader.py
tests/unit/worker/: test_worker_loop.py
tests/unit/xml/: test_votable_light_curve_reader.py
(+14 files in other folders)
