[project]
name = "data-processor"
version = "0.1.0"
description = "Autonomous astronomical data processing worker with PostgreSQL polling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.0",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

