[project]
name = "data-processor"
version = "0.1.0"
description = "Astronomical data acquisition, processing, PostgreSQL access, and local visualization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "plotly>=6.0",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.0",
    "lxml>=5.0",
    "sqlalchemy>=2.0",
    "streamlit>=1.40",
    "tqdm>=4.0",
]

[project.scripts]
data-processor = "data_processor.cli.commands:main"
init-db = "data_processor.cli.commands:init_db_main"
preload-light-curves = "data_processor.cli.commands:preload_light_curves_main"
light-curve-viewer = "data_processor.cli.commands:light_curve_viewer_main"
stop-light-curve-viewer = "data_processor.cli.commands:stop_light_curve_viewer_main"

[tool.setuptools.package-data]
data_processor = ["viewer/local_viewer/*.css"]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "C4",
    "PIE",
    "RET",
]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["data_processor"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
